Fix: user description alignment
Center Avatar and user's description

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
+  gap: var(--padding-container);
   padding: var(--padding-container);
 }
 
